# senamhi-tracker

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.postgres.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0374d318b6ec_add_scrape_runs_table.py  117aba98fd74_add_nivel_column_to_warning_geometries.py  2e2e9130ff3e_initial_schema.py  44bbe95fe9a0_add_warning_number_to_geometries_table.py  4a8110bbaf94_add_status_field_to_warnings.py  64779774da5c_add_latitude_and_longitude_to_locations.py  6e7f3b38a2a2_add_geospatial_point_column_to_locations.py  74434f1812a6_add_warning_geometries_table.py  e6405562e4b0_add_senamhi_id_to_warnings.py  ef60234a372f_initial_schema.py
app/: config.py  database.py  logging.py  main.py
app/cli/: __init__.py  commands.py
app/models/: __init__.py  forecast.py  warning.py
app/scheduler/: __init__.py  jobs.py  logger.py  scheduler.py
app/scrapers/: forecast_scraper.py  shapefile_downloader.py  shapefile_parser.py  utils.py  warning_scraper.py
app/services/: __init__.py  boundaries_service.py  coordinates_service.py  geo_service.py  geojson_service.py  openmeteo.py  weather_service.py
app/storage/: __init__.py  crud.py  geo_crud.py  geo_models.py  models.py
app/web/: app.py
app/web/routes/: api.py  main.py
app/web/static/css/: style.css
app/web/static/js/: charts.js  warning-map.js
app/web/templates/: base.html  department.html  error.html  index.html
config/: config.py  coordinates.yaml  openmeteo.yaml  settings.py
data/boundaries/departments/: DEPARTAMENTOS.dbf  DEPARTAMENTOS.shp.xml  DEPARTAMENTOS.shx
data/boundaries/districts/: DISTRITOS.shp.xml
dev_tools/: clean_shapefiles.sh
docs/: API.md  README.md  configuration.md  installation.md  troubleshooting.md
docs/deployment/: docker.md
docs/development/: setup.md
docs/features/: forecasts.md  geospatial.md
docs/usage/: cli.md  scheduler.md  web.md
scripts/: cleanup_old_warnings.py  new_migration.sh  populate_coordinates.py  reset_db.sh  sync_coordinates_to_point.py
tests/: conftest.py  test_cli.py  test_geo_service.py  test_scheduler.py  test_scheduler_integration.py  test_scraper.py  test_storage.py  test_warnings.py  test_weather_service.py
