[project]
name = "senamhi-tracker"
version = "0.1.0"
description = "Web scraper and monitor for SENAMHI Peru weather data"
authors = [
    {name = "rosepb28",email = "rosamariapb28@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "lxml (>=6.0.2,<7.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "typer (>=0.20.0,<0.21.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-cov = "^7.0.0"
responses = "^0.25.8"
ruff = "^0.14.4"
pre-commit = "^4.4.0"

[tool.poetry.scripts]
senamhi = "app.main:app"